--- a/dashboard.html
+++ b/dashboard.html
@@ -1,245 +1,164 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-  <title>Airtel Promo Dashboard</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <title>Airtel Dashboard</title>
   <style>
-    body {
+    * {
       margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+    body {
       font-family: Arial, sans-serif;
-      background: white;
+      background: #fff;
       overflow-x: hidden;
-    }
-
-    .background-logo {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      width: 250px;
-      opacity: 0.07;
-      filter: blur(8px);
-      animation: blink 4s infinite ease-in-out;
-      z-index: 0;
-      pointer-events: none;
-    }
-
-    @keyframes blink {
-      0%, 100% { opacity: 0.07; }
-      50% { opacity: 0.15; }
-    }
-
-    .content {
       position: relative;
-      z-index: 1;
     }
-
     .header {
       background-color: #d90000;
-      color: white;
       padding: 15px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-
-    .main-card {
-      background: rgba(255, 255, 255, 0.9);
-      margin: -20px 10px 10px;
-      border-radius: 15px;
-      box-shadow: 0 0 10px #ccc;
-      padding: 20px;
-      backdrop-filter: blur(10px);
-    }
-
-    .user-info {
-      font-weight: bold;
-      font-size: 16px;
-    }
-
-    .balance {
+      color: white;
       font-size: 20px;
-      margin-top: 10px;
+      font-weight: bold;
+      text-align: center;
+      position: relative;
     }
-
-    .balance .eye {
-      color: red;
+    .header .bell {
+      position: absolute;
+      right: 15px;
+      top: 50%;
+      transform: translateY(-50%);
+    }
+    .card {
+      margin: 20px auto;
+      padding: 20px;
+      width: 90%;
+      max-width: 400px;
+      border-radius: 20px;
+      background: rgba(255, 255, 255, 0.15);
+      backdrop-filter: blur(10px);
+      box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+      color: #000;
+      position: relative;
+    }
+    .card .balance-text {
+      font-size: 18px;
+    }
+    .card .amount {
+      font-size: 28px;
+      font-weight: bold;
+      margin-top: 5px;
+    }
+    .card .eye-icon {
+      position: absolute;
+      top: 20px;
+      right: 20px;
       cursor: pointer;
-      margin-left: 5px;
     }
-
-    .buttons-row {
-      display: flex;
-      justify-content: space-around;
-      margin-top: 15px;
+    .buttons {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 10px;
+      padding: 0 15px;
+      margin-top: 20px;
     }
-
-    .btn {
-      background-color: #ffe5e5;
-      border: 1px solid #ffcccc;
-      color: #d90000;
-      border-radius: 10px;
-      padding: 10px;
-      flex: 1;
-      margin: 0 5px;
+    .button {
+      background-color: #d90000;
+      color: white;
+      padding: 12px;
+      border-radius: 12px;
       text-align: center;
       font-size: 14px;
-      cursor: pointer;
+      font-weight: bold;
+      text-decoration: none;
     }
-
     .banner {
-      margin: 10px auto;
-      border-radius: 10px;
-      width: 95%;
-      display: none;
+      margin: 15px auto;
+      width: 90%;
+      max-width: 400px;
+      border-radius: 15px;
+      overflow: hidden;
     }
-
-    .section {
-      background: white;
-      border-radius: 10px;
-      margin: 10px;
-      padding: 10px;
+    .banner img {
+      width: 100%;
+      border-radius: 15px;
     }
-
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(4, 1fr);
-      gap: 10px;
-      text-align: center;
-      font-size: 12px;
-    }
-
-    .grid div {
-      padding: 10px;
-      cursor: pointer;
-      background: #f8f8f8;
-      border-radius: 10px;
-    }
-
-    .logo-container {
-      text-align: center;
-      padding: 30px 0 10px;
-    }
-
     .static-logo {
-      width: 150px;
-      max-width: 90%;
+      text-align: center;
+      margin: 25px 0;
+      animation: spinAndAssemble 4s ease-in-out;
+    }
+    .static-logo img {
+      width: 130px;
       opacity: 1;
-      animation: pulse 3s infinite ease-in-out;
     }
-
-    @keyframes pulse {
-      0%, 100% { transform: scale(1); opacity: 1; }
-      50% { transform: scale(1.1); opacity: 1; }
+    @keyframes spinAndAssemble {
+      0% {
+        transform: rotate(0deg) scale(0);
+        opacity: 0;
+      }
+      50% {
+        transform: rotate(180deg) scale(1.2);
+        opacity: 0.5;
+      }
+      100% {
+        transform: rotate(360deg) scale(1);
+        opacity: 1;
+      }
     }
-
-    .bottom-nav {
-      position: fixed;
-      bottom: 0;
+    .background-logo {
+      position: absolute;
+      top: 0;
       left: 0;
-      right: 0;
-      background: white;
-      border-top: 1px solid #ddd;
-      display: flex;
-      justify-content: space-around;
-      padding: 10px 0;
-      font-size: 12px;
-      z-index: 10;
+      width: 100%;
+      height: 100%;
+      background: url('your-logo.png') center center no-repeat;
+      background-size: contain;
+      opacity: 0.05;
+      z-index: 0;
+      pointer-events: none;
     }
   </style>
 </head>
 <body>
-  <!-- Blurred Background Logo -->
-  <img src="your-logo.png" alt="Airtel Logo" class="background-logo" />
+  <div class="background-logo"></div>  <div class="header">
+    Airtel Promo
+    <span class="bell">🔔</span>
+  </div>  <div class="card">
+    <div class="balance-text">Balance</div>
+    <div class="amount" id="balance">₦<span id="balAmount">0</span></div>
+    <div class="eye-icon" onclick="toggleBalance()">👁️</div>
+    <div>User: <span id="username">User</span></div>
+    <div>Phone: <span id="userphone">0000000000</span></div>
+  </div>  <div class="banner">
+    <img id="bannerImage" src="promo-banner.png" alt="Promo">
+  </div>  <div class="buttons">
+    <a href="addmoney.html" class="button">Add Money</a>
+    <a href="withdraw.html" class="button">Withdraw</a>
+    <a href="transfer.html" class="button">Transfer</a>
+    <a href="airtime.html" class="button">Airtime</a>
+    <a href="data.html" class="button">Data</a>
+    <a href="bills.html" class="button">Bills</a>
+  </div>  <div class="static-logo">
+    <img src="your-logo.png" alt="Airtel Logo">
+  </div>  <script>
+    let user = JSON.parse(localStorage.getItem("user")) || { name: "User", phone: "0000000000", balance: 0 };
+    document.getElementById("username").textContent = user.name;
+    document.getElementById("userphone").textContent = user.phone;
+    document.getElementById("balAmount").textContent = user.balance;
 
-  <!-- Content -->
-  <div class="content">
-    <div class="header">
-      <div><b>Airtel Promo</b></div>
-      <div><img src="bell.png" alt="Bell" width="20" /></div>
-    </div>
-
-    <div class="main-card">
-      <div class="user-info" id="userName">Loading...</div>
-      <div id="userNumber">00000000000</div>
-      <div class="balance">
-        Account Balance: <span id="userBalance">₦0.00</span>
-        <span class="eye" onclick="toggleBalance()">👁️</span>
-      </div>
-      <div class="buttons-row">
-        <div class="btn" onclick="location.href='add-money.html'">+ Add Money</div>
-        <div class="btn" onclick="location.href='withdraw.html'">Withdraw</div>
-      </div>
-    </div>
-
-    <img src="update-banner.png" class="banner" id="updateBanner" alt="Update Banner" />
-    <img src="promo-banner.png" class="banner" id="promoBanner" alt="Promo Banner" />
-
-    <div class="section">
-      <b>Transfer & Cashout</b>
-      <div class="grid">
-        <div onclick="location.href='transfer.html'">Transfer Money</div>
-        <div onclick="location.href='add-money.html'">Add Money</div>
-        <div onclick="location.href='withdraw.html'">Withdraw Cash</div>
-        <div onclick="location.href='services.html'">More Services</div>
-      </div>
-    </div>
-
-    <div class="section">
-      <b>Recharge & Bill Payments</b>
-      <div class="grid">
-        <div onclick="location.href='airtime.html'">Airtime</div>
-        <div onclick="location.href='bundle.html'">Buy Bundle</div>
-        <div onclick="location.href='bills.html'">Pay Bills</div>
-        <div onclick="location.href='electricity.html'">Electricity</div>
-      </div>
-    </div>
-
-    <!-- Static Logo Section -->
-    <div class="logo-container">
-      <img src="your-logo.png" alt="Airtel Logo" class="static-logo" />
-    </div>
-  </div>
-
-  <!-- Bottom Nav -->
-  <div class="bottom-nav">
-    <div onclick="location.href='dashboard.html'">🏠 Home</div>
-    <div onclick="location.href='scan.html'">📷 Scan</div>
-    <div onclick="location.href='history.html'">📄 History</div>
-    <div onclick="location.href='more.html'">☰ More</div>
-  </div>
-
-  <!-- JS -->
-  <script>
-    const user = JSON.parse(localStorage.getItem('user')) || {};
-    const balanceElement = document.getElementById('userBalance');
-    let isHidden = false;
-
-    document.getElementById('userName').innerText = (user.name || 'USER').toUpperCase();
-    document.getElementById('userNumber').innerText = user.phone || '08000000000';
-    const balanceValue = user.balance ? `₦${user.balance}` : '₦300.00';
-    balanceElement.innerText = balanceValue;
-
+    let showBalance = true;
     function toggleBalance() {
-      isHidden = !isHidden;
-      balanceElement.innerText = isHidden ? '••••••••' : balanceValue;
+      showBalance = !showBalance;
+      document.getElementById("balAmount").textContent = showBalance ? user.balance : "••••";
     }
 
-    const updateBanner = document.getElementById('updateBanner');
-    const promoBanner = document.getElementById('promoBanner');
-
-    function cycleBanners() {
-      updateBanner.style.display = 'block';
-      promoBanner.style.display = 'none';
-      setTimeout(() => {
-        updateBanner.style.display = 'none';
-        promoBanner.style.display = 'block';
-        setTimeout(cycleBanners, 10000); // Show promo for 10s
-      }, 5000); // Show update for 5s
-    }
-
-    cycleBanners();
-  </script>
-</body>
+    let banner = document.getElementById("bannerImage");
+    let promo = true;
+    setInterval(() => {
+      banner.src = promo ? "update-banner.png" : "promo-banner.png";
+      promo = !promo;
+    }, 10000);
+  </script></body>
 </html>
