--- a/dashboard.html
+++ b/dashboard.html
@@ -4,17 +4,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
   <title>Airtel Promo Dashboard</title>
   <style>
-    body {
+    html, body {
       margin: 0;
+      padding: 0;
       font-family: Arial, sans-serif;
       background: white;
-      overflow-x: hidden;
+      overflow: hidden;
+      height: 100%;
     }.background-logo {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 250px;
+  width: 200px;
   opacity: 0.07;
   filter: blur(8px);
   animation: blink 4s infinite ease-in-out;
@@ -30,12 +32,14 @@
 .content {
   position: relative;
   z-index: 1;
+  height: calc(100% - 60px);
+  overflow: hidden;
 }
 
 .header {
   background-color: #d90000;
   color: white;
-  padding: 15px;
+  padding: 10px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -43,21 +47,21 @@
 
 .main-card {
   background: rgba(255, 255, 255, 0.9);
-  margin: -20px 10px 10px;
-  border-radius: 15px;
-  box-shadow: 0 0 10px #ccc;
-  padding: 20px;
-  backdrop-filter: blur(10px);
+  margin: 10px;
+  border-radius: 12px;
+  box-shadow: 0 0 8px #ccc;
+  padding: 15px;
+  backdrop-filter: blur(8px);
 }
 
 .user-info {
   font-weight: bold;
-  font-size: 16px;
+  font-size: 15px;
 }
 
 .balance {
-  font-size: 20px;
-  margin-top: 10px;
+  font-size: 18px;
+  margin-top: 8px;
 }
 
 .balance .eye {
@@ -69,7 +73,7 @@
 .buttons-row {
   display: flex;
   justify-content: space-around;
-  margin-top: 15px;
+  margin-top: 12px;
 }
 
 .btn {
@@ -77,16 +81,16 @@
   border: 1px solid #ffcccc;
   color: #d90000;
   border-radius: 10px;
-  padding: 10px;
+  padding: 8px;
   flex: 1;
   margin: 0 5px;
   text-align: center;
-  font-size: 14px;
+  font-size: 13px;
   cursor: pointer;
 }
 
 .banner {
-  margin: 10px auto;
+  margin: 8px auto;
   border-radius: 10px;
   width: 95%;
   display: none;
@@ -95,20 +99,20 @@
 .section {
   background: white;
   border-radius: 10px;
-  margin: 10px;
-  padding: 10px;
+  margin: 8px;
+  padding: 8px;
 }
 
 .grid {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  gap: 10px;
+  gap: 8px;
   text-align: center;
-  font-size: 12px;
+  font-size: 11px;
 }
 
 .grid div {
-  padding: 10px;
+  padding: 8px;
   cursor: pointer;
   background: #f8f8f8;
   border-radius: 10px;
@@ -116,50 +120,34 @@
 
 .logo-container {
   text-align: center;
-  padding: 10px 0;
-  position: relative;
+  padding: 10px 0 5px;
 }
 
 .static-logo {
-  width: 80px;
+  width: 120px;
+  max-width: 90%;
   opacity: 1;
-  animation: spinPieces 4s ease-in-out infinite;
+  animation: pulse 3s infinite ease-in-out, splitSpin 2s ease-in-out forwards;
 }
 
-@keyframes spinPieces {
+@keyframes pulse {
+  0%, 100% { transform: scale(1); opacity: 1; }
+  50% { transform: scale(1.1); opacity: 1; }
+}
+
+@keyframes splitSpin {
   0% {
     transform: scale(0) rotate(0deg);
     opacity: 0;
   }
-  25% {
-    transform: scale(1.1) rotate(90deg);
-    opacity: 0.5;
-  }
   50% {
     transform: scale(1.2) rotate(180deg);
-    opacity: 0.8;
-  }
-  75% {
-    transform: scale(1.1) rotate(270deg);
     opacity: 1;
   }
   100% {
     transform: scale(1) rotate(360deg);
     opacity: 1;
   }
-}
-
-.ads-container {
-  width: 90%;
-  margin: 10px auto;
-  text-align: center;
-}
-
-.ads-container video {
-  width: 100%;
-  max-height: 180px;
-  border-radius: 15px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .bottom-nav {
@@ -171,9 +159,16 @@
   border-top: 1px solid #ddd;
   display: flex;
   justify-content: space-around;
-  padding: 10px 0;
+  padding: 8px 0;
   font-size: 12px;
   z-index: 10;
+}
+
+video.ad-video {
+  width: 100%;
+  max-height: 160px;
+  object-fit: cover;
+  border-radius: 10px;
 }
 
   </style>
@@ -182,7 +177,7 @@
   <img src="your-logo.png" alt="Airtel Logo" class="background-logo" />  <div class="content">
     <div class="header">
       <div><b>Airtel Promo</b></div>
-      <div><img src="bell.png" alt="Bell" width="20" /></div>
+      <div><img src="bell.png" alt="Bell" width="18" /></div>
     </div><div class="main-card">
   <div class="user-info" id="userName">Loading...</div>
   <div id="userNumber">00000000000</div>
@@ -202,34 +197,26 @@
 <div class="section">
   <b>Transfer & Cashout</b>
   <div class="grid">
-    <div onclick="location.href='transfer.html'">Transfer Money</div>
-    <div onclick="location.href='add-money.html'">Add Money</div>
-    <div onclick="location.href='withdraw.html'">Withdraw Cash</div>
-    <div onclick="location.href='services.html'">More Services</div>
+    <div onclick="location.href='transfer.html'">Transfer</div>
+    <div onclick="location.href='withdraw.html'">Withdraw</div>
+    <div onclick="location.href='services.html'">Services</div>
+    <div onclick="location.href='more.html'">More</div>
   </div>
 </div>
 
 <div class="section">
-  <b>Recharge & Bill Payments</b>
+  <b>Recharge & Bills</b>
   <div class="grid">
     <div onclick="location.href='airtime.html'">Airtime</div>
-    <div onclick="location.href='bundle.html'">Buy Bundle</div>
-    <div onclick="location.href='bills.html'">Pay Bills</div>
+    <div onclick="location.href='bundle.html'">Bundle</div>
+    <div onclick="location.href='bills.html'">Bills</div>
     <div onclick="location.href='electricity.html'">Electricity</div>
   </div>
 </div>
 
-<!-- Ads Section -->
-<div class="ads-container">
-  <video controls autoplay loop muted>
-    <source src="your-ad.mp4" type="video/mp4" />
-    Your browser does not support the video tag.
-  </video>
-</div>
-
-<!-- Static Logo Section -->
+<!-- Ad Video Section -->
 <div class="logo-container">
-  <img src="your-logo.png" alt="Airtel Logo" class="static-logo" />
+  <video src="ad.mp4" autoplay muted loop class="ad-video" playsinline></video>
 </div>
 
   </div>  <div class="bottom-nav">
