--- a/dashboard.html
+++ b/dashboard.html
@@ -1,331 +1,206 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Airtel Promo Dashboard</title>
   <style>
-    body {
+    * {
       margin: 0;
-      font-family: Arial, sans-serif;
-      background: white;
+      padding: 0;
+      box-sizing: border-box;
+    }
+    body {
+      font-family: sans-serif;
+      background: #fff;
+      overflow: hidden;
+      position: relative;
+    }
+    header {
+      background: red;
+      color: white;
+      text-align: center;
+      padding: 10px;
+      font-size: 20px;
+      font-weight: bold;
+    }
+    .dashboard {
+      padding: 10px;
+    }
+    .card {
+      background: rgba(255, 255, 255, 0.3);
+      backdrop-filter: blur(10px);
+      border-radius: 10px;
+      padding: 20px;
+      margin: 10px 0;
+      position: relative;
+    }
+    .card h2 {
+      font-size: 18px;
+    }
+    .logo-bg {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: url('your-logo.png') center/contain no-repeat;
+      opacity: 0.08;
+      z-index: 0;
+    }
+    .card-content {
+      position: relative;
+      z-index: 1;
+    }
+    .buttons {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      margin-top: 20px;
+    }
+    .button {
+      width: 48%;
+      padding: 15px;
+      margin-bottom: 10px;
+      background: red;
+      color: white;
+      text-align: center;
+      border-radius: 8px;
+      font-weight: bold;
+    }
+    .banner {
+      width: 100%;
+      height: 100px;
+      margin-top: 10px;
+      border-radius: 10px;
       overflow: hidden;
     }
-
-    .background-logo {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      width: 250px;
-      opacity: 0.07;
-      filter: blur(8px);
-      animation: blink 4s infinite ease-in-out;
-      z-index: 0;
-      pointer-events: none;
+    .banner img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
     }
-
-    @keyframes blink {
-      0%, 100% { opacity: 0.07; }
-      50% { opacity: 0.15; }
-    }
-
-    .header {
-      background-color: #d90000;
-      color: white;
-      padding: 15px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      position: relative;
-      z-index: 2;
-    }
-
-    .main-card {
-      background: rgba(255, 255, 255, 0.9);
-      margin: -20px 10px 10px;
-      border-radius: 15px;
-      box-shadow: 0 0 10px #ccc;
-      padding: 20px;
-      backdrop-filter: blur(10px);
-      position: relative;
-      z-index: 2;
-    }
-
-    .user-info {
-      font-weight: bold;
-      font-size: 16px;
-    }
-
-    .balance {
-      font-size: 20px;
-      margin-top: 10px;
-    }
-
-    .balance .eye {
-      color: red;
-      cursor: pointer;
-      margin-left: 5px;
-    }
-
-    .buttons-row {
-      display: flex;
-      justify-content: space-around;
-      margin-top: 15px;
-    }
-
-    .btn {
-      background-color: #ffe5e5;
-      border: 1px solid #ffcccc;
-      color: #d90000;
-      border-radius: 10px;
-      padding: 10px;
-      flex: 1;
-      margin: 0 5px;
-      text-align: center;
-      font-size: 14px;
-      cursor: pointer;
-    }
-
-    .banner {
-      margin: 10px auto;
-      border-radius: 10px;
-      width: 95%;
-      display: none;
-      z-index: 2;
-      position: relative;
-    }
-
-    .section {
-      background: white;
-      border-radius: 10px;
-      margin: 10px;
-      padding: 10px;
-      position: relative;
-      z-index: 2;
-    }
-
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(4, 1fr);
-      gap: 10px;
-      text-align: center;
-      font-size: 12px;
-    }
-
-    .grid div {
-      padding: 10px;
-      cursor: pointer;
-      background: #f8f8f8;
-      border-radius: 10px;
-    }
-
-    .video-ad-container {
+    .video-ads {
       position: fixed;
-      top: 30%;
+      bottom: 60px;
       left: 50%;
-      transform: translate(-50%, -50%);
-      width: 90%;
-      max-width: 300px;
-      background: white;
-      border-radius: 15px;
-      box-shadow: 0 0 20px #aaa;
+      transform: translateX(-50%);
+      width: 95%;
+      max-width: 400px;
+      border-radius: 10px;
+      overflow: hidden;
+      z-index: 20;
       display: none;
-      flex-direction: column;
-      align-items: center;
-      z-index: 99;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     }
-
-    video {
+    .video-ads video {
       width: 100%;
-      border-radius: 15px 15px 0 0;
     }
-
     .countdown {
-      padding: 10px;
-      text-align: center;
-      font-weight: bold;
-      background: #fff5f5;
-      width: 100%;
-      border-top: 1px solid #ffd6d6;
-    }
-
-    .logo-animated {
-      width: 150px;
-      max-width: 90%;
-      opacity: 1;
-      animation: scatter 2s ease-in-out forwards;
       position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%) scale(0);
-      z-index: 10;
-      display: none;
+      bottom: 5px;
+      right: 10px;
+      background: rgba(0, 0, 0, 0.6);
+      color: #fff;
+      padding: 2px 6px;
+      border-radius: 4px;
+      font-size: 14px;
     }
-
-    @keyframes scatter {
-      0% {
-        transform: translate(-50%, -50%) scale(0) rotate(0deg);
-        opacity: 0;
-      }
-      50% {
-        transform: translate(-50%, -50%) scale(1.2) rotate(180deg);
-        opacity: 0.5;
-      }
-      100% {
-        transform: translate(-50%, -50%) scale(1) rotate(360deg);
-        opacity: 1;
-      }
-    }
-
-    .bottom-nav {
+    footer {
       position: fixed;
       bottom: 0;
       left: 0;
       right: 0;
-      background: white;
-      border-top: 1px solid #ddd;
+      background: #fff;
       display: flex;
       justify-content: space-around;
+      border-top: 1px solid #ddd;
       padding: 10px 0;
-      font-size: 12px;
-      z-index: 2;
+    }
+    footer div {
+      font-size: 14px;
+      color: red;
     }
   </style>
 </head>
 <body>
-  <!-- Background Logo -->
-  <img src="your-logo.png" alt="Background Logo" class="background-logo" />
-
-  <!-- Header -->
-  <div class="header">
-    <div><b>Airtel Promo</b></div>
-    <div><img src="bell.png" alt="Bell" width="20" /></div>
-  </div>
-
-  <!-- Main Card -->
-  <div class="main-card">
-    <div class="user-info" id="userName">Loading...</div>
-    <div id="userNumber">00000000000</div>
-    <div class="balance">
-      Account Balance: <span id="userBalance">₦0.00</span>
-      <span class="eye" onclick="toggleBalance()">👁️</span>
+  <header>Airtel Promo</header>
+  <div class="dashboard">
+    <div class="card">
+      <div class="logo-bg"></div>
+      <div class="card-content">
+        <h2>Hello, <span id="userName">User</span></h2>
+        <p>Balance: ₦<span id="userBalance">0</span></p>
+      </div>
     </div>
-    <div class="buttons-row">
-      <div class="btn" onclick="location.href='add-money.html'">+ Add Money</div>
-      <div class="btn" onclick="location.href='withdraw.html'">Withdraw</div>
+    <div class="buttons">
+      <div class="button" onclick="location.href='addmoney.html'">Add Money</div>
+      <div class="button" onclick="location.href='withdraw.html'">Withdraw</div>
+      <div class="button">Transfer</div>
+      <div class="button">Airtime</div>
+      <div class="button">Bundle</div>
+      <div class="button">Bills</div>
     </div>
-  </div>
-
-  <!-- Banners -->
-  <img src="update-banner.png" class="banner" id="updateBanner" alt="Update Banner" />
-  <img src="promo-banner.png" class="banner" id="promoBanner" alt="Promo Banner" />
-
-  <!-- Services Section -->
-  <div class="section">
-    <b>Transfer & Cashout</b>
-    <div class="grid">
-      <div onclick="location.href='transfer.html'">Transfer Money</div>
-      <div onclick="location.href='add-money.html'">Add Money</div>
-      <div onclick="location.href='withdraw.html'">Withdraw Cash</div>
-      <div onclick="location.href='services.html'">More Services</div>
+    <div class="banner" id="promoBanner">
+      <img src="promo-banner.png" alt="Promo" />
     </div>
-  </div>
-
-  <!-- Recharge Section -->
-  <div class="section">
-    <b>Recharge & Bill Payments</b>
-    <div class="grid">
-      <div onclick="location.href='airtime.html'">Airtime</div>
-      <div onclick="location.href='bundle.html'">Buy Bundle</div>
-      <div onclick="location.href='bills.html'">Pay Bills</div>
-      <div onclick="location.href='electricity.html'">Electricity</div>
+    <div class="banner" id="updateBanner" style="display:none;">
+      <img src="update-banner.png" alt="Update" />
     </div>
-  </div>
-
-  <!-- Video Ad -->
-  <div class="video-ad-container" id="adContainer">
-    <video id="adVideo" muted autoplay>
+  </div>  <div class="video-ads" id="videoAds">
+    <video id="adsVideo" muted autoplay playsinline>
       <source src="ad.mp4" type="video/mp4" />
     </video>
-    <div class="countdown" id="countdown">Ad ends in 20s</div>
-  </div>
+    <div class="countdown" id="countdownTimer">20</div>
+  </div>  <footer>
+    <div>🏠 Home</div>
+    <div>📷 Scan</div>
+    <div>☰ More</div>
+  </footer>  <script>
+    // User Info from localStorage
+    const user = {
+      name: localStorage.getItem("user.name") || "User",
+      balance: localStorage.getItem("user.balance") || "0"
+    };
+    document.getElementById("userName").innerText = user.name;
+    document.getElementById("userBalance").innerText = user.balance;
 
-  <!-- Animated Logo after Ad -->
-  <img src="your-logo.png" class="logo-animated" id="animatedLogo" />
+    // Promo + Update banners
+    let promo = document.getElementById("promoBanner");
+    let update = document.getElementById("updateBanner");
+    let toggle = true;
+    setInterval(() => {
+      promo.style.display = toggle ? "block" : "none";
+      update.style.display = toggle ? "none" : "block";
+      toggle = !toggle;
+    }, toggle ? 10000 : 5000);
 
-  <!-- Bottom Navigation -->
-  <div class="bottom-nav">
-    <div onclick="location.href='dashboard.html'">🏠 Home</div>
-    <div onclick="location.href='scan.html'">📷 Scan</div>
-    <div onclick="location.href='history.html'">📄 History</div>
-    <div onclick="location.href='more.html'">☰ More</div>
-  </div>
+    // Video Ads Control
+    let adTimer, countdown;
+    function showAds() {
+      const videoAds = document.getElementById('videoAds');
+      const adsVideo = document.getElementById('adsVideo');
+      const countdownTimer = document.getElementById('countdownTimer');
 
-  <!-- JavaScript -->
-  <script>
-    const user = JSON.parse(localStorage.getItem('user')) || {};
-    const balanceElement = document.getElementById('userBalance');
-    let isHidden = false;
+      let seconds = 20;
+      countdownTimer.innerText = seconds;
+      videoAds.style.display = 'block';
 
-    document.getElementById('userName').innerText = (user.name || 'USER').toUpperCase();
-    document.getElementById('userNumber').innerText = user.phone || '08000000000';
-    const balanceValue = user.balance ? `₦${user.balance}` : '₦300.00';
-    balanceElement.innerText = balanceValue;
-
-    function toggleBalance() {
-      isHidden = !isHidden;
-      balanceElement.innerText = isHidden ? '••••••••' : balanceValue;
-    }
-
-    // Banners alternating
-    const updateBanner = document.getElementById('updateBanner');
-    const promoBanner = document.getElementById('promoBanner');
-
-    function cycleBanners() {
-      updateBanner.style.display = 'block';
-      promoBanner.style.display = 'none';
-      setTimeout(() => {
-        updateBanner.style.display = 'none';
-        promoBanner.style.display = 'block';
-        setTimeout(cycleBanners, 10000); // Show promo for 10s
-      }, 5000); // Show update for 5s
-    }
-
-    cycleBanners();
-
-    // Ads Logic
-    const adContainer = document.getElementById("adContainer");
-    const countdown = document.getElementById("countdown");
-    const video = document.getElementById("adVideo");
-    const animatedLogo = document.getElementById("animatedLogo");
-
-    video.controls = false;
-    video.playsInline = true;
-
-    let interval;
-    function startAd() {
-      let timeLeft = 20;
-      adContainer.style.display = "flex";
-      animatedLogo.style.display = "none";
-      countdown.innerText = `Ad ends in ${timeLeft}s`;
-
-      interval = setInterval(() => {
-        timeLeft--;
-        countdown.innerText = `Ad ends in ${timeLeft}s`;
-        if (timeLeft <= 0) {
-          clearInterval(interval);
-          adContainer.style.display = "none";
-          animatedLogo.style.display = "block";
-          setTimeout(() => {
-            animatedLogo.style.display = "none";
-            setTimeout(startAd, 10000); // Show ad again after 10s
-          }, 3000);
+      countdown = setInterval(() => {
+        seconds--;
+        countdownTimer.innerText = seconds;
+        if (seconds <= 0) {
+          clearInterval(countdown);
+          videoAds.style.display = 'none';
+          setTimeout(() => showAds(), 10000);
         }
       }, 1000);
-    }
 
-    setTimeout(startAd, 20000); // First ad after 20s
-  </script>
-</body>
-      </html>
+      adsVideo.currentTime = 0;
+      adsVideo.play();
+
+      adsVideo.controls = false;
+      adsVideo.addEventListener('contextmenu', e => e.preventDefault());
+    }
+    setTimeout(() => showAds(), 20000);
+  </script></body>
+</html>
